projects/3-kubernetes-cicd/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-cicd-demo
  labels:
    app: k8s-cicd-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: k8s-cicd-demo
